typescript/checker/tests/conformance/expressions/typeGuards/typeGuardsWithInstanceOf.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            37,
        ),
        hi: BytePos(
            43,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsWithInstanceOf.ts:2:5
  |
2 | var result: I;
  |     ^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            53,
        ),
        hi: BytePos(
            60,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsWithInstanceOf.ts:3:5
  |
3 | var result2: I;
  |     ^^^^^^^

